# ziwiki

./: .env  .gitignore  BUILD  Dockerfile  DockerfileForMonitor  DockerfileFromUbuntu  DockerfileUbuntu  Makefile  README copy.md  README.md  WORKSPACE  WORKSPACE_back  app.env  bazel-bin  bazel-out  bazel-testlogs  bazel-ziwiki  deps.bzl  dev-docker-compose.yaml  dev_compose.sh  docker-compose.yaml  gitclone.sh  go.mod  go.sum  golib.h  main.go  prod-docker-compose.yaml  prod.env  prod_compose.sh  run_alpine.sh  run_build_base.sh  run_compose.sh  run_dev.sh  sqlc.yaml  start_monitor.sh
api/: BUILD.bazel  middleware.go  middleware_test.go  repo.go  repo_test.go  server.go  user.go
backend/: BUILD  Makefile  app.env  deps.bzl  go.mod
backend/api/: BUILD.bazel  main_test.go  markdown_test.go  repo.go
backend/cmd/export_monitor/: BUILD.bazel  main.go
backend/cmd/goldmark/: case0.md  case1.md  case8.md  main.go
backend/cmd/layout/: BUILD.bazel
backend/cmd/monitor/: BUILD.bazel  main.go
backend/db/migration/: 000001_init_schema.up.sql  000002_add_sessions.up.sql
backend/db/query/: markdown.sql  repo.sql  session.sql  user.sql
backend/db/sqlc/: BUILD.bazel  main_test.go  markdown_test.go  models.go  repo.sql.go  repo_test.go  session.sql.go  user.sql.go  user_test.go
backend/gitsync/: BUILD.bazel  clone.go  gitclone_test.go
backend/jsonlayout/: gitclone_test.go  layout.go  main_test.go
backend/markdown/mathjax/: BUILD.bazel  inline_renderer.go
backend/markdown/render/: BUILD.bazel
backend/monitor/: BUILD.bazel  main_test.go
backend/token/: BUILD.bazel  paseto_maker.go
backend/util/: BUILD.bazel
build_image_on_alpine/: DockerfileDeps  DockerfileGazelle  DockerfileMonitor  DockerfilePostgres  DockerfileRun  README.md  api.Dockerfile  build_image_on_alpine.md  deps.Dockerfile  deps.sh  monitor.Dockerfile  nginx.Dockerfile
build_image_on_alpine/util/: deps.sh  deps_postgres.sh
build_image_on_ubuntu/: DockerfileMonitorCpp  README.md  deps.sh  run_ubuntu.sh
builds_alpine/: DockerfileAlpine  deps.sh
cert/: bundle.crt  nginx.conf
db/migration/: 000001_init_schema.up.sql  000002_add_sessions.up.sql  000003_add_markdowns.down.sql  000003_add_markdowns.up.sql
db/mock/: store.go
db/query/: markdown.sql  repo.sql  user.sql
db/sqlc/: markdown.sql.go  markdown_test.go  models.go  querier.go  repo.sql.go  repo_test.go  session.sql.go  store.go  user.sql.go
docker_nginx/: Dockerfile  README.md  run.sh
docker_nginx/resources/: index.html
docker_nginx/src/: 1_zizdlp.com_bundle_old.crt  2_zizdlp.com.key  2_zizdlp.com_old.key  nginx.conf
fronted/: .env  README.md  dev.Dockerfile  lingui.config.js  package-lock.json  package.json  prod.Dockerfile  tailwind.config.js  tsconfig.json
fronted/Mermaid/: index.js
fronted/components/: createrepo.js  createrepo.tsx  deleterepo.tsx  demomd.js  form.js  map.tsx  navbar.js  navbar.tsx  popnav.tsx  profile.js  profile.tsx  search.js  search.tsx  sessiontable.tsx  sidebar.js  sidebar.tsx  submenu.js  submenu.tsx  updaterepo.tsx  updateuser.tsx  uploadprofile.tsx  usertable.tsx
fronted/lib/: validate.js
fronted/mermaid/: index.tsx
fronted/pages/: _app.tsx  _document.tsx  admin.tsx  aindex.tsx  d3.js  demo.tsx  get.js  index.js  index.tsx  login.js  plotly.js  profile.js  register.js  s2.js  s2.tsx  side.js  side_back.js  style.js  style.tsx  table.js  test.js  upload.tsx
fronted/styles/: globals.css
fronted/types/: next-auth.d.ts
fronted/utils/: env_variable.ts  index.js  index.ts  json_parser_config.tsx  validate.ts  web_fetch.ts
gitclone/: git.sh  git_expect.sh  gitclone.go  gitclone_test.go  gogit.go  main_test.go
gitsync/: clone.go  gitclone_test.go
lute/: BUILD.bazel  README.md  go.sum  golib.h  lute.go
moniterFS/: FileWatcher.h  test_fs_watcher  test_monitor.cpp
nextapp/: .env  dev.Dockerfile  next.config.js  package-lock.json  package.json  prod.Dockerfile  tailwind.config.js  tsconfig.json
nextapp/components/: createrepo.tsx  pagebar.tsx  profile.tsx  search.tsx  sidebar.tsx  updateuser.tsx  uploadprofile.tsx  usertable.tsx
nextapp/pages/: demo.tsx  lang.tsx  noti.tsx  test.tsx
nextapp/types/: next-auth.d.ts
nextapp/utils/: env_variable.ts  mathjax_config.ts  validate.ts  web_fetch.ts
run/: dev-docker-compose.yaml  dev.env  dev_compose.sh  prod-docker-compose.yaml  prod_compose.sh
srccpp/: BUILD  FileWatcher.h  demo.cpp  initGenMd.cpp  monitorGenMd.cpp  run.sh  test_monitor.cpp
token/: jwt_maker.go  jwt_maker_test.go  maker.go  paseto_maker.go  paseto_maker_test.go  payload.go
util/: random.go
ziwiki/: README.md  WORKSPACE  app.env  deps.bzl  go.mod  go.sum  start.sh
ziwiki/api/: BUILD.bazel  markdown.go  markdown_test.go  repo.go  repo_test.go  serve.go  server.go  session.go  static.go  token.go  user.go  user_test.go
ziwiki/chromahtml/: BUILD.bazel  chromahtml.go
ziwiki/cmd/goldmark/: BUILD.bazel  case0.md  case1.md  case3.md  case4.md  case8.md  guide0.html  guide1.html  guide3.html  guide4.html  guide8.html  main.go
ziwiki/cmd/monitor/: BUILD.bazel
ziwiki/cmd/re/: BUILD.bazel  case3.md  main.go  res.txt
ziwiki/cmd/server/: BUILD.bazel  main.go
ziwiki/cmd/timer/: BUILD.bazel  demo3.md  main.go
ziwiki/db/mock/: BUILD.bazel  store.go
ziwiki/db/sqlc/: BUILD.bazel  markdown.sql.go  markdown_test.go  models.go  querier.go  repo.sql.go  repo_test.go  user.sql.go  user_test.go
ziwiki/gitsync/: BUILD.bazel  clone.go  gitclone_test.go
ziwiki/highlight/: BUILD.bazel  hightlight.go
ziwiki/jsonlayout/: BUILD.bazel  gitclone_test.go  layout.go
ziwiki/lute/: BUILD.bazel  lute.go
ziwiki/main/: BUILD  hello-world.cc
ziwiki/mathjax/: BUILD.bazel  block_renderer.go  inline_renderer.go
ziwiki/mdextensions/: BUILD.bazel  footnote.go  html.go  table.go  tasklist.go
ziwiki/monitor/: BUILD.bazel  monitor.go  monitor_test.go
ziwiki/monitor_cpp/: BUILD  monitor.cc  monitor.h
ziwiki/postrender/: BUILD.bazel  postrender.go
ziwiki/token/: BUILD.bazel  jwt_maker_test.go  paseto_maker_test.go
ziwiki/util/: config.go
ziwiki/wikirender/: html.go
(+37 files in other folders)
