load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitsync",
    srcs = ["clone.go"],
    importpath = "github.com/zdlpsina/ziwiki/gitsync",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing/transport/http",
    ],
)

go_test(
    name = "gitsync_test",
    srcs = [
        "gitclone_test.go",
        "main_test.go",
    ],
    embed = [":gitsync"],
    deps = [
        "//util",
        "@com_github_stretchr_testify//require",
    ],
)
