load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "markdown.go",
        "middleware.go",
        "repo.go",
        "server.go",
        "token.go",
        "user.go",
    ],
    importpath = "github.com/zdlpsina/ziwiki/api",
    visibility = ["//visibility:public"],
    deps = [
        "//ziwiki/db/sqlc",
        "//ziwiki/gitsync",
        "//ziwiki/token",
        "//ziwiki/util",
        "@com_github_gin_contrib_cors//:go_default_library",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_uuid//:uuid",
        "@com_github_lib_pq//:pq",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "main_test.go",
        "markdown_test.go",
        "middleware_test.go",
        "repo_test.go",
        "user_test.go",
    ],
    embed = [":api"],
    deps = [
        "//ziwiki/db/mock",
        "//ziwiki/db/sqlc",
        "//ziwiki/token",
        "//ziwiki/util",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_mock//gomock",
        "@com_github_lib_pq//:pq",
        "@com_github_stretchr_testify//require",
    ],
)
