load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jsonlayout",
    srcs = ["layout.go"],
    importpath = "github.com/zdlpsina/ziwiki/jsonlayout",
    visibility = ["//visibility:public"],
)

go_test(
    name = "jsonlayout_test",
    srcs = [
        "gitclone_test.go",
        "main_test.go",
    ],
    embed = [":jsonlayout"],
)
