load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lute",
    srcs = ["lute.go"],
    cgo = True,
    importpath = "github.com/zdlpsina/ziwiki/lute",
    visibility = ["//visibility:public"],
    deps = [
        "//db/sqlc",
        "@com_github_88250_lute//:lute",
        "@com_github_lib_pq//:pq",
    ],
)
