load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lute",
    srcs = ["lute.go"],
    cgo = True,
    importpath = "github.com/zdlpsina/ziwiki/lute",
    visibility = ["//visibility:public"],
    deps = [
        "//chromahtml",
        "//db/sqlc",
        "//highlight",
        "//mathjax",
        "//mdextensions",
        "@com_github_abhinav_goldmark_toc//:go_default_library",
        "@com_github_lib_pq//:pq",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
        "@com_github_yuin_goldmark//renderer",
        "@com_github_yuin_goldmark//util",
    ],
)
