load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "monitor",
    srcs = ["monitor.go"],
    importpath = "github.com/zdlpsina/ziwiki/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "//db/sqlc",
        "//jsonlayout",
        "//lute",
        "@com_github_dietsche_rfsnotify//:rfsnotify",
    ],
)

go_test(
    name = "monitor_test",
    srcs = [
        "main_test.go",
        "monitor_test.go",
    ],
    embed = [":monitor"],
    deps = [
        "//db/sqlc",
        "//gitsync",
        "//util",
        "@com_github_stretchr_testify//require",
    ],
)
