load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "token",
    srcs = [
        "jwt_maker.go",
        "maker.go",
        "paseto_maker.go",
        "payload.go",
    ],
    importpath = "github.com/zdlpsina/ziwiki/token",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aead_chacha20poly1305//:chacha20poly1305",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_google_uuid//:uuid",
        "@com_github_o1egl_paseto//:paseto",
    ],
)

go_test(
    name = "token_test",
    srcs = [
        "jwt_maker_test.go",
        "paseto_maker_test.go",
    ],
    embed = [":token"],
    deps = [
        "//ziwiki/util",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_stretchr_testify//require",
    ],
)
