load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "layout_lib",
    srcs = ["main.go"],
    importpath = "github.com/zdlpsina/ziwiki/cmd/layout",
    visibility = ["//visibility:private"],
    deps = ["//jsonlayout"],
)

go_binary(
    name = "layout",
    embed = [":layout_lib"],
    visibility = ["//visibility:public"],
)
