load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "render",
    srcs = ["render.go"],
    cgo = True,
    importpath = "github.com/zdlpsina/ziwiki/markdown/render",
    visibility = ["//visibility:public"],
    deps = [
        "//chromahtml",
        "//db/sqlc",
        "//markdown/highlight",
        "//markdown/mathjax",
        "//markdown/mdextensions",
        "@com_github_abhinav_goldmark_toc//:goldmark-toc",
        "@com_github_lib_pq//:pq",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
        "@com_github_yuin_goldmark//renderer",
        "@com_github_yuin_goldmark//text",
        "@com_github_yuin_goldmark//util",
    ],
)
