load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "monitor_lib",
    srcs = ["main.go"],
    importpath = "github.com/zdlpsina/ziwiki/cmd/monitor",
    visibility = ["//visibility:private"],
    deps = [
        "//ziwiki/db/sqlc",
        "//ziwiki/monitor",
        "//ziwiki/util",
        "@com_github_lib_pq//:pq",
    ],
)

go_binary(
    name = "monitor",
    embed = [":monitor_lib"],
    visibility = ["//visibility:public"],
)
