load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "re_lib",
    srcs = ["main.go"],
    importpath = "github.com/zdlpsina/ziwiki/cmd/re",
    visibility = ["//visibility:private"],
    deps = [
        "//postrender",
        "@com_github_88250_lute//:lute",
    ],
)

go_binary(
    name = "re",
    embed = [":re_lib"],
    visibility = ["//visibility:public"],
)
