load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    cgo = True,
    importpath = "github.com/zdlpsina/ziwiki/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//ziwiki/api",
        "//ziwiki/db/sqlc",
        "//ziwiki/util",
        "@com_github_lib_pq//:pq",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
