load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "timer_lib",
    srcs = ["main.go"],
    importpath = "github.com/zdlpsina/ziwiki/cmd/timer",
    visibility = ["//visibility:private"],
    deps = [
        "//chromahtml",
        "//markdown/highlight",
        "//markdown/mathjax",
        "//markdown/mdextensions",
        "@com_github_abhinav_goldmark_toc//:goldmark-toc",
        "@com_github_jeffail_tunny//:tunny",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
        "@com_github_yuin_goldmark//renderer",
        "@com_github_yuin_goldmark//text",
        "@com_github_yuin_goldmark//util",
    ],
)

go_binary(
    name = "timer",
    embed = [":timer_lib"],
    visibility = ["//visibility:public"],
)
