load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["store.go"],
    importpath = "github.com/zdlpsina/ziwiki/db/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//ziwiki/db/sqlc",
        "@com_github_golang_mock//gomock",
        "@com_github_google_uuid//:uuid",
    ],
)
