load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sqlc",
    srcs = [
        "db.go",
        "markdown.sql.go",
        "models.go",
        "querier.go",
        "repo.sql.go",
        "session.sql.go",
        "store.go",
        "user.sql.go",
    ],
    importpath = "github.com/zdlpsina/ziwiki/db/sqlc",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "sqlc_test",
    srcs = [
        "main_test.go",
        "markdown_test.go",
        "repo_test.go",
        "user_test.go",
    ],
    embed = [":sqlc"],
    deps = [
        "//ziwiki/util",
        "@com_github_lib_pq//:pq",
        "@com_github_stretchr_testify//require",
    ],
)
